--- a/assets/css/gs-main.scss
+++ b/assets/css/gs-main.scss
@@ -128,6 +128,11 @@ a, a:hover {
   color: #4d00d2;
 }
 
+.danger {
+  background: #f56c6c20;
+  color: #f56c6c;
+}
+
 .primary:not(.no-hover):hover {
   background: #4d00d2;
   color: #ffffff;
