Implement Send Message to user function

--- a/assets/css/gs-design-system.scss
+++ b/assets/css/gs-design-system.scss
@@ -33,6 +33,10 @@
     transition: all 0.25s ease-out;
   }
 
+  .el-textarea__inner {
+    height: auto !important;
+  }
+
   i {
     position: relative;
     top: 10%;
