--- a/assets/css/gs-design-system.scss
+++ b/assets/css/gs-design-system.scss
@@ -55,6 +55,36 @@
   }
 }
 
+.gs-filters {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 20px 0;
+
+  .el-form-item {
+    margin-bottom: 0;
+    height: auto !important;
+    width: 300px;
+  }
+
+  .el-button {
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+
+    i {
+      margin-left: 5px;
+      font-size: 12px;
+    }
+
+    &:hover {
+      border-color: #7f828b;
+      color: #7f828b;
+      transform: translateY(0) !important;
+      box-shadow: none !important;
+    }
+  }
+}
 
 /* ========== BUTTON =========== */
 .el-button {
@@ -82,6 +112,10 @@
   padding: 30px;
   border-radius: 10px;
   box-shadow: none !important;
+
+  .el-card__body {
+    padding: 0;
+  }
 }
 
 /* ======== POPOVER ======= */
