Added payments page on admin dashboard

--- a/assets/css/gs-main.scss
+++ b/assets/css/gs-main.scss
@@ -133,6 +133,11 @@ a, a:hover {
   color: #f56c6c;
 }
 
+.success {
+  background: #3b807020;
+  color: #3b8070;
+}
+
 .primary:not(.no-hover):hover {
   background: #4d00d2;
   color: #ffffff;
