--- a/assets/css/gs-design-system.scss
+++ b/assets/css/gs-design-system.scss
@@ -201,3 +201,12 @@
     width: 80% !important;
   }
 }
+
+
+/* ======== TABLE ======== */
+.el-table {
+  th {
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+}
