Responsiveness for Admin, authenticating routes

--- a/assets/css/gs-design-system.scss
+++ b/assets/css/gs-design-system.scss
@@ -117,7 +117,7 @@
 
 /* ========== CARD ========== */
 .el-card {
-  padding: 30px;
+  padding: 50px 30px;
   border-radius: 10px;
   box-shadow: none !important;
 
